coins-1.5-en/test/c/unsupported/SemanticError/tpassign0-1.c
/* Assign/tpassign0-1.c: void with return */
void main(){
int x,y;
x = 0;
y = 0;
x = y;
printf("This test will cause 'void with return' error.\n"); /* SF030609 */
return x;
}
